--- a/rust_actix_server/Cargo.toml
+++ b/rust_actix_server/Cargo.toml
@@ -5,5 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
+
 [dependencies]
 actix-web = "4.0"
